# Optimal-investment-project

./: .gitignore  Description.md  README.md  pyproject.toml
configs/: base.yaml  lstm_reg.yaml  mlp_clf.yaml  mlp_reg.yaml
data/cache/: ff_factors_5x2.parquet
docs/: literature_review.md
notebooks/: 04_strategies_comparison.ipynb
scripts/: bootstrap_metrics.py  compare_holdout_quality.py  compare_runs.py  download_kaggle.sh  download_spx.py  holdout_metrics.py  run_baselines.py  run_dl_clf.py  run_dl_reg.py  run_dl_sweep.py  run_factor_benchmarks.py  run_mlp_dropout_sweep.py  run_mlp_epochs_sweep.py  run_mlp_hidden_sweep.py  run_mlp_train_kw_sweep.py  smoke_backtest.py
src/backtest/: dataset_adapter.py  experiment_config.py  factor_column_strategy.py  mc_strategy.py  strategy.py
src/data/: features.py  loader.py  universe.py
src/evaluation/: artifacts.py  benchmarks.py  block_bootstrap.py  ff_factors.py  holdout.py  market_impact.py  plots.py  run_registry.py  tracker.py
src/models/: base.py  gbrt.py  logreg.py  lstm.py  mc_dropout_mlp.py  mlp.py  ridge.py  rule_based.py
src/training/: trainer.py
src/utils/: io.py  seed.py
tests/: test_benchmarks.py  test_block_bootstrap.py  test_compare_runs.py  test_config.py  test_dataset_adapter.py  test_dl_models.py  test_features.py  test_ff_factors.py  test_gbrt.py  test_holdout.py  test_loader.py  test_logreg.py  test_mc_dropout.py  test_plots_smoke.py  test_run_registry.py  test_seq_strategy.py  test_strategy.py  test_trainer.py  test_trainer_val_split.py  test_turnover_impact.py  test_universe.py
