[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-momentum"
version = "0.1.0"
description = "DL momentum strategy: MLP/LSTM/MC-Dropout vs Ridge/LogReg baselines, backtested via quant-pml on Kaggle US-equity dataset."
# quant-pml требует ровно Python 3.12.5; ставим venv через `uv venv --python 3.12.5`.
requires-python = ">=3.12.5,<3.13"
authors = [{ name = "k.deter" }]
readme = "README.md"

dependencies = [
    # Версии numpy/pandas/torch/pyarrow подтянутся под quant-pml (torch==2.8.0, pyarrow==20.0.0).
    "numpy>=2.2.4",
    "pandas>=2.3.1",
    "pyarrow>=20",
    "scikit-learn>=1.5.2",
    "scipy>=1.16.1",
    "torch==2.8.0",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "tqdm>=4.67",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "kaggle>=1.6",
    "quant-pml>=0.1.16",
    "mlflow>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "ipykernel>=6",
    "jupyter>=1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
